[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.1", features = ["derive"] }
serde_json = "1.0.68"
tokio-postgres = "0.7.10"
tokio-test = "0.4.3"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
