[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["json", "macros"] }
serde = { version = "1.0.1", features = ["derive"] }
serde_json = "1.0.68"
tokio-postgres = "0.7.10"
postgres-types = { version = "0.2.6", features = ["with-chrono-0_4"] }
tokio-test = "0.4.3"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
config = { version = "0.13.4", features = [] }
deadpool-postgres = "0.12.1"
log = "0.4.20"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.5"
once_cell = "1.19.0"
regex = "1.10.2"
async-stripe = { version = "0.34.1", features = ["runtime-tokio-hyper"] }
dotenv = "0.15.0"
tower = "0.4.13"

[dev-dependencies]
mockall = "0.12.1"
